style: dark mode toolbar icon color fix

--- a/django_editorjs_fields/static/django-editorjs-fields/css/django-editorjs-fields.css
+++ b/django_editorjs_fields/static/django-editorjs-fields/css/django-editorjs-fields.css
@@ -162,4 +162,8 @@ div[data-editorjs-holder] {
 		background-color: #162a34;
 		color: #fff;
 	}
+
+	.change-form #container #content-main .ce-popover-item:hover .ce-popover-item__icon {
+		color: black;
+	}
 }
